<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <SeekBarPreference
    android:key="@string/code_length_key"
    android:title="@string/code_length_title"
    android:summary="@string/code_length_summary"
    app:min="@integer/code_length_min"
    android:max="@integer/code_length_max"
    android:defaultValue="@integer/code_length_default"
    app:showSeekBarValue="true"
    android:icon="@drawable/code_length"/>

<!--  TODO: Add icon.-->
  <SeekBarPreference
    android:key="@string/games_threshold_key"
    android:title="@string/games_threshold_title"
    android:summary="@string/games_threshold_summary"
    app:min="@integer/games_threshold_min"
    android:max="@integer/games_threshold_max"
    android:defaultValue="@integer/games_threshold_default"
    app:showSeekBarValue="true"/>

</PreferenceScreen>