<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group
    android:id="@+id/game_play_group"
    android:checkableBehavior="single">

    <item
      android:id="@+id/game_fragment"
      android:title="@string/game_menu_label"/>
    <!--  TODO: Add icon-->

    <item
      android:id="@+id/scores_fragment"
      android:title="@string/scores_fragment_label"
      android:icon="@drawable/ranked_list"/>

    <item
      android:id="@+id/ranks_fragment"
      android:title="@string/ranks_fragment_label"
      android:icon="@drawable/ranked_list"/>

  </group>

  <group
    android:id="@+id/control_group"
    android:checkableBehavior="single">

    <item
      android:id="@+id/settings_fragment"
      android:title="@string/settings"
      android:icon="@drawable/settings"/>

    <item
      android:id="@+id/sign_out"
      android:title="@string/sign_out"
      android:icon="@drawable/logout"/>
  </group>

</menu>