<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main_navigation_map"
  app:startDestination="@id/game_fragment">

  <fragment
    android:id="@+id/game_fragment"
    android:name="edu.cnm.deepdive.codebreaker.controller.GameFragment"
    android:label="@string/game_fragment_label"
    tools:layout="@layout/fragment_game">

    <action
      android:id="@+id/navigate_to_scores"
      app:destination="@id/scores_fragment">

      <argument
        android:name="code_length"
        app:argType="integer"/>

    </action>

    <action
      android:id="@+id/navigate_to_settings"
      app:destination="@id/settings_fragment"/>

  </fragment>

<fragment
  android:id="@+id/scores_fragment"
  android:name="edu.cnm.deepdive.codebreaker.controller.ScoresFragment"
  android:label="@string/scores_fragment_label"
  tools:layout="@layout/fragment_scores">

  <argument
    android:name="code_length"
    app:argType="integer"/>

</fragment>

  <fragment
    android:id="@+id/settings_fragment"
    android:name="edu.cnm.deepdive.codebreaker.controller.SettingsFragment"
    android:label="@string/settings_fragment_label"/>


</navigation>