<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:paddingTop="@dimen/half_dynamic_spacing"
  tools:context=".controller.ScoresFragment">

  <TextView
    android:id="@+id/code_length_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/half_dynamic_spacing"
    android:layout_marginStart="@dimen/full_dynamic_spacing"
    android:layout_marginEnd="@dimen/half_dynamic_spacing"
    android:text="@string/code_length_label"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <SeekBar
    android:id="@+id/code_length"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:max="@integer/code_length_max"
    android:min="@integer/code_length_min"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:layout_constraintStart_toEndOf="@id/code_length_label"
    app:layout_constraintTop_toTopOf="@id/code_length_label"
    app:layout_constraintBottom_toBottomOf="@id/code_length_label"
    app:layout_constraintEnd_toStartOf="@id/code_length_value"/>

  <TextView
    android:id="@+id/code_length_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/half_dynamic_spacing"
    android:layout_marginStart="@dimen/half_dynamic_spacing"
    android:layout_marginEnd="@dimen/full_dynamic_spacing"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBaseline_toBaselineOf="@id/code_length_label"
    tools:text="4"/>

  <LinearLayout
    android:id="@+id/column_headers"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:padding="@dimen/half_dynamic_spacing"
    android:layout_marginTop="@dimen/half_dynamic_spacing"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/code_length_label"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/guess_count_header"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_static_spacing"
      android:layout_weight="1"
      android:text="@string/guess_count_header"/>

    <TextView
      android:id="@+id/duration_header"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_static_spacing"
      android:layout_weight="1"
      android:text="@string/duration_header"/>

    <TextView
      android:id="@+id/timestamp_header"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_static_spacing"
      android:layout_weight="1"
      android:text="@string/timestamp_header"/>

  </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/game_results"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:orientation="vertical"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintTop_toBottomOf="@id/column_headers"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      tools:listitem="@layout/item_game_results"/>



</androidx.constraintlayout.widget.ConstraintLayout>